Issue #2443 - improved readability on field elements

--- a/webcompat/static/css/src/issues-list.css
+++ b/webcompat/static/css/src/issues-list.css
@@ -91,8 +91,8 @@
 }
 
 #x-search-bar .nav-button {
-  margin-left: -18px;
-  margin-top: -23px;
+  margin-left: -22px;
+  margin-top: -29px;
   position: absolute;
   z-index: 200;
 }
